--- a/libs/libmy/libparse/Makefile
+++ b/libs/libmy/libparse/Makefile
@@ -23,7 +23,8 @@ clean	:
 		$(RM) $(OBJ)
 
 fclean  :	clean
-		$(RM) $(NAME)
+		$(RM) $(SNAME)
+		$(RM) $(DNAME)
 
 lib	:	$(OBJ)
 		ar r $(SNAME) $(OBJ) $(LIBS)
